<resources>
    <string name="app_name">AskEmotions</string>
    <string name="btn_basico">Btn</string>
    <string name="btn_grabar_text">Emoción</string>
    <string name="titulo_emocion">Emociones</string>
    <string name="titulo_bienvenido">Hola, %1$s!</string>
    <string name="titulo_conversacion">Conversacion con: </string>
    <string name="btn_emociones">Emociones</string>
    <string name="btn_agenda">Agenda</string>
    <string name="btn_explorar">Explorar</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="etNombreUsuario">Introduce tu nombre</string>
    <string name="btn_volver">Volver</string>
    <string name="text_norespuesta">No Respuesta</string>
    <string name="text_agenda">Agenda</string>
    <string name="text_tituloinfocontacto">Información Contacto</string>
    <string name="text_nombreContacto">Nombre:</string>
    <string name="text_numeroConver">Nº Conversaciones:</string>
    <string name="text_vecesBoton">Nº Veces Emociones:</string>
    <string name="btn_conversaciones">Conversaciones</string>
    <string name="btn_borrarContacto">Borrar</string>
    <string name="text_nombreConversacion">Conversaciones con:</string>
    <string name="text_explorar">Explorar</string>

    <string name="etNombreNuevoContacto">Nombre Contacto</string>


    <string name="text_nombreDispositivo">Nombre Dispositivo:</string>
    <string name="text_macDispositivo">MAC Dispositivo:</string>
    <string name="btn_agregar">Agregar</string>
    <string name="text_agregarContacto">Agregar contacto</string>

    <string name="text_no_contactos">AÚN NO TIENES CONTACTOS, VE A EXPLORAR Y AÑADE EL PRIMERO</string>
    <string name="titulo_confirmarBorrado">¿Estás seguro de que deseas borrar este contacto?</string>
    <string name="btn_si">Sí</string>
    <string name="btn_no">No</string>
    <string name="no_conversaciones">No hay conversaciones con este contacto.</string>
    <string name="infoconversacion">Información \nConversacion</string>
    <string name="text_askeotions">BIENVENIDO A ASKEMOTIONS</string>
    <string name="btn_emocionesregistro">Emociones</string>
    <string name="text_registro_emociones">Registro de Emociones</string>
    <string name="btn_conversacion">Conversación</string>


</resources>