<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirmarBorrado"
        android:textSize="18sp"
        android:paddingStart="26dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_si"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewConfirmacion"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_no"
        android:background="@drawable/button_delete_background"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSi"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
